[package]
name = "rssreader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
atty = "0.2.14"
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
log = "0.4.20"
reqwest = "0.11.23"
rss = "2.0.6"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
